# MyHandSCI

./: README.md
data_collection/: recover_data.py
myhand_sci_arduino/Angle_Measurement_NoMPLX/: Angle_Measurement_NoMPLX.ino
myhand_sci_firmware/: CMakeLists.txt  package.xml
myhand_sci_firmware/launch/: arduino.launch  data_main.launch  force_experiment.launch
myhand_sci_firmware/scripts/: myhand_sci_angle_gui.py  myhand_sci_data_collector.py  myhand_sci_experiment_gui.py  myhand_sci_force_gui.py  myhand_sci_imu_subscriber.py
myhand_sci_msgs/: CMakeCache.txt  CMakeLists.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  package.xml
myhand_sci_msgs/atomic_configure/: .rosinstall  _setup_util.py
myhand_sci_msgs/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
myhand_sci_msgs/catkin_generated/installspace/: myhand_sci_msgs-msg-extras.cmake  myhand_sci_msgs-msg-paths.cmake  myhand_sci_msgs.pc  myhand_sci_msgsConfig.cmake
myhand_sci_msgs/catkin_generated/stamps/myhand_sci_msgs/: package.xml.stamp
myhand_sci_msgs/cmake/: myhand_sci_msgs-genmsg-context.py  myhand_sci_msgs-genmsg.cmake
myhand_sci_msgs/devel/: .catkin  local_setup.sh  setup.sh
myhand_sci_msgs/devel/lib/pkgconfig/: myhand_sci_msgs.pc
myhand_sci_msgs/devel/share/myhand_sci_msgs/cmake/: myhand_sci_msgs-msg-extras.cmake  myhand_sci_msgs-msg-paths.cmake  myhand_sci_msgsConfig.cmake
myhand_sci_msgs/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
myhand_sci_msgs/gtest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
myhand_sci_msgs/gtest/googletest/: CTestTestfile.cmake  Makefile
myhand_sci_msgs/msg/: DataEntry.msg  FlagStamped.msg  Futek.msg  IMU_Quat.msg
(+40 files in other folders)
