<?xml version="1.0"?>
<package format="2">
  <name>myhand_sci_firmware</name>
  <version>0.1.0</version>
  <description>MyHand-SCI Firmware package</description>

  <maintainer email="jbp2157@columbia.edu">Joaquin Palacios</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>myhand_sci_msgs</build_depend>

  <!-- <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend> -->

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>myhand_sci_msgs</exec_depend>

  <!-- <export>
  </export> -->
</package>
