<?xml version="1.0"?>
<package format="2">
  <name>myhand_sci_msgs</name>
  <version>0.1.0</version>
  <description>MyHand-SCI Messages package</description>

  <maintainer email="jbp2157@columbia.edu">Joaquin Palacios</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <!-- <export>
  </export> -->
</package>
